15_Workflow-Orchestration-with-Apache-Airflow/Praktikum/Eksplorasi/logs/dag_id=fruits_dag/run_id=scheduled__2023-03-25T000000+0000/task_id=create_fruits_table/attempt=1.log
[2024-04-09T18:51:10.851+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-04-09T18:51:11.014+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: fruits_dag.create_fruits_table scheduled__2023-03-25T00:00:00+00:00 [queued]>
[2024-04-09T18:51:11.053+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: fruits_dag.create_fruits_table scheduled__2023-03-25T00:00:00+00:00 [queued]>
[2024-04-09T18:51:11.054+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 2
[2024-04-09T18:51:11.123+0000] {taskinstance.py:2327} INFO - Executing <Task(PostgresOperator): create_fruits_table> on 2023-03-25 00:00:00+00:00
[2024-04-09T18:51:11.145+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=2554) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-04-09T18:51:11.147+0000] {standard_task_runner.py:63} INFO - Started process 2556 to run task
[2024-04-09T18:51:11.163+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'fruits_dag', 'create_fruits_table', 'scheduled__2023-03-25T00:00:00+00:00', '--job-id', '266', '--raw', '--subdir', 'DAGS_FOLDER/fruit_table_dag.py', '--cfg-path', '/tmp/tmp6s6l5cez']
[2024-04-09T18:51:11.166+0000] {standard_task_runner.py:91} INFO - Job 266: Subtask create_fruits_table
[2024-04-09T18:51:11.303+0000] {task_command.py:426} INFO - Running <TaskInstance: fruits_dag.create_fruits_table scheduled__2023-03-25T00:00:00+00:00 [running]> on host fd38698150f5
[2024-04-09T18:51:11.535+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='fruits_dag' AIRFLOW_CTX_TASK_ID='create_fruits_table' AIRFLOW_CTX_EXECUTION_DATE='2023-03-25T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-03-25T00:00:00+00:00'
[2024-04-09T18:51:11.539+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-04-09T18:51:11.540+0000] {sql.py:276} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS fruits (
            id SERIAL PRIMARY KEY,
            name VARCHAR(50) NOT NULL,
            calories DECIMAL NOT NULL,
            fat DECIMAL NOT NULL,
            sugar DECIMAL NOT NULL,
            carbohydrates DECIMAL NOT NULL,
            protein DECIMAL NOT NULL,
        );

        -- Perbaikan: Menambahkan sequence fruits_id_seq
        CREATE SEQUENCE IF NOT EXISTS fruits_id_seq
            START WITH 1
            INCREMENT BY 1
            NO MINVALUE
            NO MAXVALUE
            CACHE 1;
    
[2024-04-09T18:51:11.565+0000] {base.py:84} INFO - Using connection ID 'eksplorasi_postgres' for task execution.
[2024-04-09T18:51:11.589+0000] {base.py:84} INFO - Using connection ID 'eksplorasi_postgres' for task execution.
[2024-04-09T18:51:11.610+0000] {sql.py:457} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS fruits (
            id SERIAL PRIMARY KEY,
            name VARCHAR(50) NOT NULL,
            calories DECIMAL NOT NULL,
            fat DECIMAL NOT NULL,
            sugar DECIMAL NOT NULL,
            carbohydrates DECIMAL NOT NULL,
            protein DECIMAL NOT NULL,
        );

        -- Perbaikan: Menambahkan sequence fruits_id_seq
        CREATE SEQUENCE IF NOT EXISTS fruits_id_seq
            START WITH 1
            INCREMENT BY 1
            NO MINVALUE
            NO MAXVALUE
            CACHE 1;
    , parameters: None
[2024-04-09T18:51:11.621+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-04-09T18:51:11.632+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 10:         );
                 ^

[2024-04-09T18:51:11.668+0000] {taskinstance.py:1205} INFO - Marking task as UP_FOR_RETRY. dag_id=fruits_dag, task_id=create_fruits_table, execution_date=20230325T000000, start_date=20240409T185111, end_date=20240409T185111
[2024-04-09T18:51:11.720+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 266 for task create_fruits_table (syntax error at or near ")"
LINE 10:         );
                 ^
; 2556)
[2024-04-09T18:51:11.791+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-04-09T18:51:11.816+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-09T18:51:11.876+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-09T18:51:11.892+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
[2024-04-09T19:19:21.245+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-04-09T19:19:21.735+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: fruits_dag.create_fruits_table scheduled__2023-03-25T00:00:00+00:00 [queued]>
[2024-04-09T19:19:21.886+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: fruits_dag.create_fruits_table scheduled__2023-03-25T00:00:00+00:00 [queued]>
[2024-04-09T19:19:21.890+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 2
[2024-04-09T19:19:22.822+0000] {taskinstance.py:2327} INFO - Executing <Task(PostgresOperator): create_fruits_table> on 2023-03-25 00:00:00+00:00
[2024-04-09T19:19:22.889+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'fruits_dag', 'create_fruits_table', 'scheduled__2023-03-25T00:00:00+00:00', '--job-id', '369', '--raw', '--subdir', 'DAGS_FOLDER/fruit_table_dag.py', '--cfg-path', '/tmp/tmpvz90j8c3']
[2024-04-09T19:19:22.898+0000] {standard_task_runner.py:91} INFO - Job 369: Subtask create_fruits_table
[2024-04-09T19:19:22.889+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=3197) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-04-09T19:19:22.922+0000] {standard_task_runner.py:63} INFO - Started process 3207 to run task
[2024-04-09T19:19:25.701+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-04-09T19:19:25.763+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-09T19:19:26.149+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-09T19:19:26.233+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
